Add LibSQL client dependency

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   },
   "homepage": "https://github.com/spences10/mcp-embedding-exec#readme",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "1.6.1"
+    "@modelcontextprotocol/sdk": "1.6.1",
+    "@libsql/client": "^0.5.6"
   },
   "devDependencies": {
     "@changesets/cli": "^2.28.1",
